frame/support/test/tests/pallet_ui/storage_multiple_renames.stderr
error: Invalid pallet::storage, multiple argument pallet::storage_prefix found
  --> $DIR/storage_multiple_renames.rs:20:3
   |
20 |     #[pallet::storage_prefix = "Baz"]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
